fix featured item alignment

--- a/styles/products_index.scss
+++ b/styles/products_index.scss
@@ -10,6 +10,7 @@ section.featured {
   article.featured-listing {
     display: flex;
     flex-direction: column;
+    align-items: center;
     text-align: center;
     border: 2px solid black;
     margin-bottom: 20px;
